# LLM-Zero2Pro

./: .gitattributes  .gitignore  LLM-Zero2Pro.code-workspace  README.md  progress.yaml  pyproject.toml  requirements-hosted-gpu.txt
checks/: __init__.py
course/: README.md  course.yaml  exercises.yaml  projects.yaml  roadmap.yaml
docs/: 00_environment.md  00_scoop.md  01_paper_discovery.md  01_paper_workflow.md  02_learning_method.md  README.md  architecture_evolution.md  code_templates.md  core_learning_path.md  full_learning_path.md  learning_path.md
examples/: capstone_template.py  compare_attention.py  moe_diagnostics.py  train_tiny_gpt.py
exercises/: 01_foundations.md  03_transformer.md  07_moe.md  README.md  __init__.py  hints.md  manifest.yaml
knowledge/: README.md  paper_graph.md
learning/: README.md
notebooks/: 00_START_HERE.ipynb  00_shapes_and_autograd.ipynb  01_attention_lab.ipynb  02_moe_lab.ipynb  03_tiny_gpt.ipynb  80_multimodal_bridge.ipynb  90_optional_gpu_check.ipynb  README.md  attention_frontiers_lab.ipynb  inference_serving_lab.ipynb  modern_decoder_lab.ipynb  neural_lm_lab.ipynb  posttraining_lab.ipynb  pretraining_lab.ipynb  tokenization_lab.ipynb
papers/: README.md  catalog.yaml  schema.json
scripts/: seed_deep_dive.py  sync_labs.py  sync_notebooks.py
setup/: environment.md  jupyterlab.md  vscode.md
solutions/: selected_solutions.md
tests/: test_attention.py  test_autograd.py  test_course_data.py  test_discovery.py  test_exercise_system.py  test_inference.py  test_interactive_browser.py  test_learning_assets.py  test_moe.py  (+13 more)
(+322 files in other folders)
